--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "native-base": "^2.8.1",
     "react": "16.5.0",
     "react-native": "0.57.2",
+    "react-native-popup-dialog": "^0.15.1",
     "react-navigation": "^2.17.0"
   },
   "devDependencies": {
